Fix bug: allow div#root to stretch to maximum width

--- a/frontend/web-game/src/styles/index.css
+++ b/frontend/web-game/src/styles/index.css
@@ -10,6 +10,7 @@ body {
 
 #root {
   max-width: 1800px;
+  width: 100%;
   flex: 1;
   display: flex;
   flex-direction: column;
